// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`buildGraphData snapshot matches desktop snapshot 1`] = `
{
  "branchGroups": [],
  "branches": [
    {
      "color": "#3b82f6",
      "endRow": 70,
      "entries": [
        {
          "degree": "High School Diploma",
          "description": "Focus on programming in C# and web development using PHP, and JavaScript frameworks.",
          "endMonth": 6,
          "endYear": 2020,
          "location": "Sweden",
          "organization": "Haganässkolan",
          "showDates": true,
          "startMonth": 8,
          "startYear": 2017,
          "title": "Information and Media Technology",
          "type": "education",
        },
      ],
      "forkRow": 103,
      "id": "__ungrouped_0",
      "lane": -1,
      "side": "left",
      "type": "education",
    },
    {
      "color": "#22c55e",
      "endRow": 80,
      "entries": [
        {
          "description": "Summer worker at the restaurant.",
          "employmentType": "Seasonal",
          "endMonth": 8,
          "endYear": 2019,
          "location": "Älmhult, Sweden",
          "organization": "IKEA",
          "showDates": true,
          "startMonth": 6,
          "startYear": 2019,
          "title": "FOOD Co-Worker",
          "type": "work",
        },
      ],
      "forkRow": 81,
      "id": "__ungrouped_2",
      "lane": 1,
      "side": "right",
      "type": "work",
    },
    {
      "color": "#f59e0b",
      "endRow": 39,
      "entries": [
        {
          "description": "Summer job and recurring weekend work at the restaurant, bistro and Swedish Food Market.",
          "employmentType": "Contract",
          "endMonth": 1,
          "endYear": 2023,
          "location": "Älmhult, Sweden",
          "organization": "IKEA",
          "showDates": true,
          "startMonth": 6,
          "startYear": 2022,
          "title": "FOOD Co-Worker",
          "type": "work",
        },
      ],
      "forkRow": 45,
      "id": "__ungrouped_3",
      "lane": 1,
      "side": "right",
      "type": "work",
    },
    {
      "color": "#ef4444",
      "endRow": 10,
      "entries": [
        {
          "degree": "Bachelor of Science",
          "description": "Bachelor of Science with a major in Informatics, Digital Design and Innovation",
          "endMonth": 6,
          "endYear": 2025,
          "location": "Halmstad, Sweden",
          "organization": "Halmstad University",
          "showDates": true,
          "startMonth": 8,
          "startYear": 2022,
          "title": "Informatics, Digital Design and Innovation",
          "type": "education",
        },
      ],
      "forkRow": 43,
      "id": "__ungrouped_1",
      "lane": -1,
      "side": "left",
      "type": "education",
    },
    {
      "color": "#a855f7",
      "endRow": 1,
      "entries": [
        {
          "description": "Building and nurturing the open source community",
          "employmentType": "Part-time",
          "endMonth": 6,
          "endYear": 2025,
          "group": "electricity-maps",
          "location": "Remote, Denmark",
          "organization": "Electricity Maps",
          "showDates": true,
          "startMonth": 12,
          "startYear": 2022,
          "title": "Open Source Community Engineer",
          "type": "work",
        },
        {
          "description": "Powering decarbonization through data",
          "employmentType": "Full-time",
          "endYear": null,
          "group": "electricity-maps",
          "location": "Hybrid, Denmark",
          "organization": "Electricity Maps",
          "showDates": true,
          "startMonth": 7,
          "startYear": 2025,
          "title": "Software Engineer",
          "type": "work",
        },
      ],
      "forkRow": 39,
      "id": "electricity-maps",
      "lane": 2,
      "side": "right",
      "type": "work",
    },
  ],
  "forks": [
    {
      "color": "#3b82f6",
      "curveHeight": 24,
      "direction": "down",
      "fromX": 120,
      "toX": 80,
      "y": 832,
    },
    {
      "color": "#3b82f6",
      "curveHeight": 24,
      "direction": "up",
      "fromX": 80,
      "toX": 120,
      "y": 568,
    },
    {
      "color": "#22c55e",
      "curveHeight": 24,
      "direction": "down",
      "fromX": 120,
      "toX": 160,
      "y": 656,
    },
    {
      "color": "#22c55e",
      "curveHeight": 24,
      "direction": "up",
      "fromX": 160,
      "toX": 120,
      "y": 648,
    },
    {
      "color": "#f59e0b",
      "curveHeight": 24,
      "direction": "down",
      "fromX": 120,
      "toX": 160,
      "y": 368,
    },
    {
      "color": "#f59e0b",
      "curveHeight": 24,
      "direction": "up",
      "fromX": 160,
      "toX": 120,
      "y": 320,
    },
    {
      "color": "#ef4444",
      "curveHeight": 24,
      "direction": "down",
      "fromX": 120,
      "toX": 80,
      "y": 352,
    },
    {
      "color": "#ef4444",
      "curveHeight": 24,
      "direction": "up",
      "fromX": 80,
      "toX": 120,
      "y": 88,
    },
    {
      "color": "#a855f7",
      "curveHeight": 24,
      "direction": "down",
      "fromX": 120,
      "toX": 200,
      "y": 320,
    },
  ],
  "graphWidth": 240,
  "nodes": [
    {
      "branchId": "__life",
      "color": "var(--color-tertiary-400)",
      "entry": {
        "organization": "Sweden",
        "showDates": false,
        "startMonth": 2,
        "startYear": 1999,
        "title": "Born",
        "type": "life",
      },
      "gridRow": 326,
      "gridRowEnd": 333,
      "lane": 0,
      "row": 326,
      "side": "right",
    },
    {
      "branchId": "__ungrouped_0",
      "color": "#3b82f6",
      "entry": {
        "degree": "High School Diploma",
        "description": "Focus on programming in C# and web development using PHP, and JavaScript frameworks.",
        "endMonth": 6,
        "endYear": 2020,
        "location": "Sweden",
        "organization": "Haganässkolan",
        "showDates": true,
        "startMonth": 8,
        "startYear": 2017,
        "title": "Information and Media Technology",
        "type": "education",
      },
      "gridRow": 87,
      "gridRowEnd": 107,
      "lane": -1,
      "row": 87,
      "side": "left",
    },
    {
      "branchId": "__ungrouped_2",
      "color": "#22c55e",
      "entry": {
        "description": "Summer worker at the restaurant.",
        "employmentType": "Seasonal",
        "endMonth": 8,
        "endYear": 2019,
        "location": "Älmhult, Sweden",
        "organization": "IKEA",
        "showDates": true,
        "startMonth": 6,
        "startYear": 2019,
        "title": "FOOD Co-Worker",
        "type": "work",
      },
      "gridRow": 81,
      "gridRowEnd": 99,
      "lane": 1,
      "row": 81,
      "side": "right",
    },
    {
      "branchId": "__ungrouped_3",
      "color": "#f59e0b",
      "entry": {
        "description": "Summer job and recurring weekend work at the restaurant, bistro and Swedish Food Market.",
        "employmentType": "Contract",
        "endMonth": 1,
        "endYear": 2023,
        "location": "Älmhult, Sweden",
        "organization": "IKEA",
        "showDates": true,
        "startMonth": 6,
        "startYear": 2022,
        "title": "FOOD Co-Worker",
        "type": "work",
      },
      "gridRow": 49,
      "gridRowEnd": 69,
      "lane": 1,
      "row": 42,
      "side": "right",
    },
    {
      "branchId": "__ungrouped_1",
      "color": "#ef4444",
      "entry": {
        "degree": "Bachelor of Science",
        "description": "Bachelor of Science with a major in Informatics, Digital Design and Innovation",
        "endMonth": 6,
        "endYear": 2025,
        "location": "Halmstad, Sweden",
        "organization": "Halmstad University",
        "showDates": true,
        "startMonth": 8,
        "startYear": 2022,
        "title": "Informatics, Digital Design and Innovation",
        "type": "education",
      },
      "gridRow": 27,
      "gridRowEnd": 47,
      "lane": -1,
      "row": 27,
      "side": "left",
    },
    {
      "branchId": "electricity-maps",
      "color": "#a855f7",
      "entry": {
        "description": "Building and nurturing the open source community",
        "employmentType": "Part-time",
        "endMonth": 6,
        "endYear": 2025,
        "group": "electricity-maps",
        "location": "Remote, Denmark",
        "organization": "Electricity Maps",
        "showDates": true,
        "startMonth": 12,
        "startYear": 2022,
        "title": "Open Source Community Engineer",
        "type": "work",
      },
      "gridRow": 26,
      "gridRowEnd": 46,
      "lane": 2,
      "row": 25,
      "side": "right",
    },
    {
      "branchId": "electricity-maps",
      "color": "#a855f7",
      "entry": {
        "description": "Powering decarbonization through data",
        "employmentType": "Full-time",
        "endYear": null,
        "group": "electricity-maps",
        "location": "Hybrid, Denmark",
        "organization": "Electricity Maps",
        "showDates": true,
        "startMonth": 7,
        "startYear": 2025,
        "title": "Software Engineer",
        "type": "work",
      },
      "gridRow": 5,
      "gridRowEnd": 23,
      "lane": 2,
      "row": 5,
      "side": "right",
    },
  ],
  "totalGridRows": 333,
}
`;

exports[`buildGraphData snapshot matches compact snapshot 1`] = `
{
  "branchGroups": [
    {
      "color": "#a855f7",
      "gridRow": 5,
      "gridRowEnd": 41,
      "nodes": [
        {
          "branchId": "electricity-maps",
          "color": "#a855f7",
          "entry": {
            "description": "Powering decarbonization through data",
            "employmentType": "Full-time",
            "endYear": null,
            "group": "electricity-maps",
            "location": "Hybrid, Denmark",
            "organization": "Electricity Maps",
            "showDates": true,
            "startMonth": 7,
            "startYear": 2025,
            "title": "Software Engineer",
            "type": "work",
          },
          "gridRow": 5,
          "gridRowEnd": 41,
          "lane": -3,
          "row": 5,
          "side": "left",
        },
        {
          "branchId": "electricity-maps",
          "color": "#a855f7",
          "entry": {
            "description": "Building and nurturing the open source community",
            "employmentType": "Part-time",
            "endMonth": 6,
            "endYear": 2025,
            "group": "electricity-maps",
            "location": "Remote, Denmark",
            "organization": "Electricity Maps",
            "showDates": true,
            "startMonth": 12,
            "startYear": 2022,
            "title": "Open Source Community Engineer",
            "type": "work",
          },
          "gridRow": 5,
          "gridRowEnd": 41,
          "lane": -3,
          "row": 25,
          "side": "left",
        },
      ],
      "side": "left",
    },
    {
      "color": "#ef4444",
      "gridRow": 41,
      "gridRowEnd": 77,
      "nodes": [
        {
          "branchId": "__ungrouped_1",
          "color": "#ef4444",
          "entry": {
            "degree": "Bachelor of Science",
            "description": "Bachelor of Science with a major in Informatics, Digital Design and Innovation",
            "endMonth": 6,
            "endYear": 2025,
            "location": "Halmstad, Sweden",
            "organization": "Halmstad University",
            "showDates": true,
            "startMonth": 8,
            "startYear": 2022,
            "title": "Informatics, Digital Design and Innovation",
            "type": "education",
          },
          "gridRow": 41,
          "gridRowEnd": 77,
          "lane": -2,
          "row": 27,
          "side": "left",
        },
      ],
      "side": "left",
    },
    {
      "color": "#f59e0b",
      "gridRow": 77,
      "gridRowEnd": 113,
      "nodes": [
        {
          "branchId": "__ungrouped_3",
          "color": "#f59e0b",
          "entry": {
            "description": "Summer job and recurring weekend work at the restaurant, bistro and Swedish Food Market.",
            "employmentType": "Contract",
            "endMonth": 1,
            "endYear": 2023,
            "location": "Älmhult, Sweden",
            "organization": "IKEA",
            "showDates": true,
            "startMonth": 6,
            "startYear": 2022,
            "title": "FOOD Co-Worker",
            "type": "work",
          },
          "gridRow": 77,
          "gridRowEnd": 113,
          "lane": -1,
          "row": 42,
          "side": "left",
        },
      ],
      "side": "left",
    },
    {
      "color": "#22c55e",
      "gridRow": 113,
      "gridRowEnd": 149,
      "nodes": [
        {
          "branchId": "__ungrouped_2",
          "color": "#22c55e",
          "entry": {
            "description": "Summer worker at the restaurant.",
            "employmentType": "Seasonal",
            "endMonth": 8,
            "endYear": 2019,
            "location": "Älmhult, Sweden",
            "organization": "IKEA",
            "showDates": true,
            "startMonth": 6,
            "startYear": 2019,
            "title": "FOOD Co-Worker",
            "type": "work",
          },
          "gridRow": 113,
          "gridRowEnd": 149,
          "lane": -2,
          "row": 81,
          "side": "left",
        },
      ],
      "side": "left",
    },
    {
      "color": "#3b82f6",
      "gridRow": 149,
      "gridRowEnd": 185,
      "nodes": [
        {
          "branchId": "__ungrouped_0",
          "color": "#3b82f6",
          "entry": {
            "degree": "High School Diploma",
            "description": "Focus on programming in C# and web development using PHP, and JavaScript frameworks.",
            "endMonth": 6,
            "endYear": 2020,
            "location": "Sweden",
            "organization": "Haganässkolan",
            "showDates": true,
            "startMonth": 8,
            "startYear": 2017,
            "title": "Information and Media Technology",
            "type": "education",
          },
          "gridRow": 149,
          "gridRowEnd": 185,
          "lane": -1,
          "row": 87,
          "side": "left",
        },
      ],
      "side": "left",
    },
    {
      "color": "var(--color-tertiary-400)",
      "gridRow": 326,
      "gridRowEnd": 362,
      "nodes": [
        {
          "branchId": "__life",
          "color": "var(--color-tertiary-400)",
          "entry": {
            "organization": "Sweden",
            "showDates": false,
            "startMonth": 2,
            "startYear": 1999,
            "title": "Born",
            "type": "life",
          },
          "gridRow": 326,
          "gridRowEnd": 362,
          "lane": 0,
          "row": 326,
          "side": "right",
        },
      ],
      "side": "right",
    },
  ],
  "branches": [
    {
      "color": "#3b82f6",
      "endRow": 149,
      "entries": [
        {
          "degree": "High School Diploma",
          "description": "Focus on programming in C# and web development using PHP, and JavaScript frameworks.",
          "endMonth": 6,
          "endYear": 2020,
          "location": "Sweden",
          "organization": "Haganässkolan",
          "showDates": true,
          "startMonth": 8,
          "startYear": 2017,
          "title": "Information and Media Technology",
          "type": "education",
        },
      ],
      "forkRow": 185,
      "id": "__ungrouped_0",
      "lane": -1,
      "side": "left",
      "type": "education",
    },
    {
      "color": "#22c55e",
      "endRow": 113,
      "entries": [
        {
          "description": "Summer worker at the restaurant.",
          "employmentType": "Seasonal",
          "endMonth": 8,
          "endYear": 2019,
          "location": "Älmhult, Sweden",
          "organization": "IKEA",
          "showDates": true,
          "startMonth": 6,
          "startYear": 2019,
          "title": "FOOD Co-Worker",
          "type": "work",
        },
      ],
      "forkRow": 149,
      "id": "__ungrouped_2",
      "lane": -2,
      "side": "left",
      "type": "work",
    },
    {
      "color": "#f59e0b",
      "endRow": 77,
      "entries": [
        {
          "description": "Summer job and recurring weekend work at the restaurant, bistro and Swedish Food Market.",
          "employmentType": "Contract",
          "endMonth": 1,
          "endYear": 2023,
          "location": "Älmhult, Sweden",
          "organization": "IKEA",
          "showDates": true,
          "startMonth": 6,
          "startYear": 2022,
          "title": "FOOD Co-Worker",
          "type": "work",
        },
      ],
      "forkRow": 113,
      "id": "__ungrouped_3",
      "lane": -1,
      "side": "left",
      "type": "work",
    },
    {
      "color": "#ef4444",
      "endRow": 41,
      "entries": [
        {
          "degree": "Bachelor of Science",
          "description": "Bachelor of Science with a major in Informatics, Digital Design and Innovation",
          "endMonth": 6,
          "endYear": 2025,
          "location": "Halmstad, Sweden",
          "organization": "Halmstad University",
          "showDates": true,
          "startMonth": 8,
          "startYear": 2022,
          "title": "Informatics, Digital Design and Innovation",
          "type": "education",
        },
      ],
      "forkRow": 77,
      "id": "__ungrouped_1",
      "lane": -2,
      "side": "left",
      "type": "education",
    },
    {
      "color": "#a855f7",
      "endRow": 5,
      "entries": [
        {
          "description": "Building and nurturing the open source community",
          "employmentType": "Part-time",
          "endMonth": 6,
          "endYear": 2025,
          "group": "electricity-maps",
          "location": "Remote, Denmark",
          "organization": "Electricity Maps",
          "showDates": true,
          "startMonth": 12,
          "startYear": 2022,
          "title": "Open Source Community Engineer",
          "type": "work",
        },
        {
          "description": "Powering decarbonization through data",
          "employmentType": "Full-time",
          "endYear": null,
          "group": "electricity-maps",
          "location": "Hybrid, Denmark",
          "organization": "Electricity Maps",
          "showDates": true,
          "startMonth": 7,
          "startYear": 2025,
          "title": "Software Engineer",
          "type": "work",
        },
      ],
      "forkRow": 41,
      "id": "electricity-maps",
      "lane": -3,
      "side": "left",
      "type": "work",
    },
  ],
  "forks": [
    {
      "color": "#3b82f6",
      "curveHeight": 15,
      "direction": "down",
      "fromX": 56,
      "toX": 42,
      "y": 934.5,
    },
    {
      "color": "#3b82f6",
      "curveHeight": 15,
      "direction": "up",
      "fromX": 42,
      "toX": 56,
      "y": 754.5,
    },
    {
      "color": "#22c55e",
      "curveHeight": 15,
      "direction": "down",
      "fromX": 56,
      "toX": 28,
      "y": 754.5,
    },
    {
      "color": "#22c55e",
      "curveHeight": 15,
      "direction": "up",
      "fromX": 28,
      "toX": 56,
      "y": 574.5,
    },
    {
      "color": "#f59e0b",
      "curveHeight": 15,
      "direction": "down",
      "fromX": 56,
      "toX": 42,
      "y": 574.5,
    },
    {
      "color": "#f59e0b",
      "curveHeight": 15,
      "direction": "up",
      "fromX": 42,
      "toX": 56,
      "y": 394.5,
    },
    {
      "color": "#ef4444",
      "curveHeight": 15,
      "direction": "down",
      "fromX": 56,
      "toX": 28,
      "y": 394.5,
    },
    {
      "color": "#ef4444",
      "curveHeight": 15,
      "direction": "up",
      "fromX": 28,
      "toX": 56,
      "y": 214.5,
    },
    {
      "color": "#a855f7",
      "curveHeight": 15,
      "direction": "down",
      "fromX": 56,
      "toX": 14,
      "y": 214.5,
    },
  ],
  "graphWidth": 112,
  "nodes": [
    {
      "branchId": "__life",
      "color": "var(--color-tertiary-400)",
      "entry": {
        "organization": "Sweden",
        "showDates": false,
        "startMonth": 2,
        "startYear": 1999,
        "title": "Born",
        "type": "life",
      },
      "gridRow": 326,
      "gridRowEnd": 362,
      "lane": 0,
      "row": 326,
      "side": "right",
    },
    {
      "branchId": "__ungrouped_0",
      "color": "#3b82f6",
      "entry": {
        "degree": "High School Diploma",
        "description": "Focus on programming in C# and web development using PHP, and JavaScript frameworks.",
        "endMonth": 6,
        "endYear": 2020,
        "location": "Sweden",
        "organization": "Haganässkolan",
        "showDates": true,
        "startMonth": 8,
        "startYear": 2017,
        "title": "Information and Media Technology",
        "type": "education",
      },
      "gridRow": 149,
      "gridRowEnd": 185,
      "lane": -1,
      "row": 87,
      "side": "left",
    },
    {
      "branchId": "__ungrouped_2",
      "color": "#22c55e",
      "entry": {
        "description": "Summer worker at the restaurant.",
        "employmentType": "Seasonal",
        "endMonth": 8,
        "endYear": 2019,
        "location": "Älmhult, Sweden",
        "organization": "IKEA",
        "showDates": true,
        "startMonth": 6,
        "startYear": 2019,
        "title": "FOOD Co-Worker",
        "type": "work",
      },
      "gridRow": 113,
      "gridRowEnd": 149,
      "lane": -2,
      "row": 81,
      "side": "left",
    },
    {
      "branchId": "__ungrouped_3",
      "color": "#f59e0b",
      "entry": {
        "description": "Summer job and recurring weekend work at the restaurant, bistro and Swedish Food Market.",
        "employmentType": "Contract",
        "endMonth": 1,
        "endYear": 2023,
        "location": "Älmhult, Sweden",
        "organization": "IKEA",
        "showDates": true,
        "startMonth": 6,
        "startYear": 2022,
        "title": "FOOD Co-Worker",
        "type": "work",
      },
      "gridRow": 77,
      "gridRowEnd": 113,
      "lane": -1,
      "row": 42,
      "side": "left",
    },
    {
      "branchId": "__ungrouped_1",
      "color": "#ef4444",
      "entry": {
        "degree": "Bachelor of Science",
        "description": "Bachelor of Science with a major in Informatics, Digital Design and Innovation",
        "endMonth": 6,
        "endYear": 2025,
        "location": "Halmstad, Sweden",
        "organization": "Halmstad University",
        "showDates": true,
        "startMonth": 8,
        "startYear": 2022,
        "title": "Informatics, Digital Design and Innovation",
        "type": "education",
      },
      "gridRow": 41,
      "gridRowEnd": 77,
      "lane": -2,
      "row": 27,
      "side": "left",
    },
    {
      "branchId": "electricity-maps",
      "color": "#a855f7",
      "entry": {
        "description": "Building and nurturing the open source community",
        "employmentType": "Part-time",
        "endMonth": 6,
        "endYear": 2025,
        "group": "electricity-maps",
        "location": "Remote, Denmark",
        "organization": "Electricity Maps",
        "showDates": true,
        "startMonth": 12,
        "startYear": 2022,
        "title": "Open Source Community Engineer",
        "type": "work",
      },
      "gridRow": 5,
      "gridRowEnd": 41,
      "lane": -3,
      "row": 25,
      "side": "left",
    },
    {
      "branchId": "electricity-maps",
      "color": "#a855f7",
      "entry": {
        "description": "Powering decarbonization through data",
        "employmentType": "Full-time",
        "endYear": null,
        "group": "electricity-maps",
        "location": "Hybrid, Denmark",
        "organization": "Electricity Maps",
        "showDates": true,
        "startMonth": 7,
        "startYear": 2025,
        "title": "Software Engineer",
        "type": "work",
      },
      "gridRow": 5,
      "gridRowEnd": 41,
      "lane": -3,
      "row": 5,
      "side": "left",
    },
  ],
  "totalGridRows": 362,
}
`;
